--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: $
+          github_token: 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
           branch: master
           force: true
 
