--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: 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
+          github_token: ${{ secrets.MY_GITHUB_TOKEN_GH_PAGES }}
           branch: master
           force: true
 
@@ -42,4 +42,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: $
+          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN_GH_PAGES }}
